# axvisor

./: .gitmodules  Cargo.toml  TODO.md
.cargo/: config.toml
.github/workflows/: qemu-aarch64.toml  qemu-riscv64.toml  test.yml
configs/board/: qemu-riscv64.toml
kernel/: Cargo.toml  build.rs
kernel/src/: main.rs  task.rs
kernel/src/hal/: mod.rs
kernel/src/hal/arch/aarch64/: api.rs
kernel/src/vmm/: config.rs  mod.rs  vcpus.rs
kernel/src/vmm/images/: mod.rs
modules/axconfig/src/: lib.rs
modules/axconfig/src/arch/: riscv64.rs  x86_64.rs
modules/axfs/: Cargo.toml
modules/axfs/src/: dev.rs  lib.rs  root.rs
modules/axfs/src/fs/: ext4fs.rs  mod.rs
modules/axruntime/: Cargo.toml
modules/axruntime/src/: lib.rs
modules/driver/src/soc/rockchip/: mod.rs
platform/riscv64-qemu-virt/: Cargo.toml  axconfig.toml  build.rs  linker.lds.S
platform/riscv64-qemu-virt/src/: boot.rs  lib.rs
xtask/: Cargo.toml
xtask/src/: cargo.rs
