[workspace]
members = [
  "crates/*",
  "modules/*",
  "platform/*",
  "xtask",
  "kernel",
]

exclude = [
  "crates/axvisor_api",
]
resolver = "3"

[profile.release]
lto = true

[workspace.package]

authors = ["Keyang Hu <keyang.hu@qq.com>", "周睿 <zrufo747@outlook.com>"]
edition = "2024"
license = "GPL-3.0-or-later OR Apache-2.0 OR MulanPubL-2.0 OR MulanPSL2"
version = "0.1.0"

[workspace.dependencies]
bitflags = "2.2"
cfg-if = "1.0"
cpumask = "0.1.0"
kernel_guard = "0.1"
kspin = "0.1"
lazy_static = {version = "1.5", default-features = false, features = ["spin_no_std"]}
lazyinit = "0.2"
log = "0.4"
spin = "0.9"
timer_list = "0.1"
toml = "0.9"

# System dependent modules provided by ArceOS.
# FIXME: pin to a specific tag!
axstd = { path = "/home/yanlien/Program/riscv64/arceos/ulib/axstd", features = [
  # "alloc-level-1",
  "alloc",
  "paging",
  "irq",
  "multitask",
  "task-ext",
  "smp", 
  "page-alloc-64g",
]}

# axalloc = {git = "https://github.com/arceos-org/arceos.git", tag = "dev-251202"}
# axconfig = {git = "https://github.com/arceos-org/arceos.git", tag = "dev-251202"}
# axdisplay = {git = "https://github.com/arceos-org/arceos.git", tag = "dev-251202"}
# axdriver = {git = "https://github.com/arceos-org/arceos.git", tag = "dev-251202"}
# axfs = {git = "https://github.com/arceos-org/arceos.git", tag = "dev-251202"}
# axhal = {git = "https://github.com/arceos-org/arceos.git", tag = "dev-251202"}
# axipi = {git = "https://github.com/arceos-org/arceos.git", tag = "dev-251202"}
# axlog = {git = "https://github.com/arceos-org/arceos.git", tag = "dev-251202"}
# axmm = {git = "https://github.com/arceos-org/arceos.git", tag = "dev-251202"}
# axnet = {git = "https://github.com/arceos-org/arceos.git", tag = "dev-251202"}
# axtask = {git = "https://github.com/arceos-org/arceos.git", tag = "dev-251202"}

axalloc = { path = "/home/yanlien/Program/riscv64/arceos/modules/axalloc" }
axconfig = { path = "/home/yanlien/Program/riscv64/arceos/modules/axconfig" }
axdisplay = { path = "/home/yanlien/Program/riscv64/arceos/modules/axdisplay" }
axdriver = { path = "/home/yanlien/Program/riscv64/arceos/modules/axdriver" }
axfs = { path = "/home/yanlien/Program/riscv64/arceos/modules/axfs" }
axhal = { path = "/home/yanlien/Program/riscv64/arceos/modules/axhal" }
axipi = { path = "/home/yanlien/Program/riscv64/arceos/modules/axipi" }
axlog = { path = "/home/yanlien/Program/riscv64/arceos/modules/axlog" }
axmm = { path = "/home/yanlien/Program/riscv64/arceos/modules/axmm" }
axnet = { path = "/home/yanlien/Program/riscv64/arceos/modules/axnet" }
axtask = { path = "/home/yanlien/Program/riscv64/arceos/modules/axtask" }

axcpu = {git = "https://github.com/arceos-org/axcpu.git", tag = "dev-v03"}
axplat = {git = "https://github.com/arceos-org/axplat_crates.git", tag = "dev-v03"}

# System dependent modules provided by ArceOS-Hypervisor.
# axaddrspace = "0.1"
axaddrspace = {path = "/home/yanlien/Program/riscv64/axvisor/crates/axaddrspace"}
axhvc = {git = "https://github.com/arceos-hypervisor/axhvc.git"}
axklib = {git = "https://github.com/arceos-hypervisor/axklib.git"}
axruntime = {path = "modules/axruntime"}
axvcpu = "0.1"
axvm = { path = "crates/axvm" }

# System independent crates provided by ArceOS, these crates could be imported by remote url. 
axerrno = "0.2"
byte-unit = {version = "5", default-features = false, features = ["byte"]}
crate_interface = "0.1"
fdt-parser = "0.4"
memory_addr = "0.4"
page_table_entry = {version = "0.5", features = ["arm-el2"]}
page_table_multiarch = "0.5"
percpu = {version = "0.2", features = ["arm-el2"]}
rdif-intc = "0.12"
rdrive = "0.18"

vm-fdt = {git = "https://github.com/bullhh/vm-fdt.git", default-features = false, features = ["alloc"]}

axdevice = {git = "https://github.com/arceos-hypervisor/axdevice.git"}
axdevice_base = "0.1"
axvisor_api = "0.1"
driver = {path = "modules/driver"}

# platform
axplat-x86-qemu-q35 = {path = "platform/x86-qemu-q35"}
axplat-riscv64-qemu-virt = {path = "platform/riscv64-qemu-virt"}
axvmconfig = { path = "/home/yanlien/Program/riscv64/axvisor/crates/axvmconfig" }

[patch.crates-io]
axvcpu = { path = "/home/yanlien/Program/riscv64/axvisor/crates/axvcpu" }
axvmconfig = { path = "/home/yanlien/Program/riscv64/axvisor/crates/axvmconfig" }
axaddrspace = {path = "/home/yanlien/Program/riscv64/axvisor/crates/axaddrspace"}

[patch."https://github.com/arceos-org/arceos"]
axconfig = {path = "modules/axconfig"}
axruntime = {path = "modules/axruntime"}
